# LearningOpenCV

./: CMakeLists.txt  ColorThresholding.cpp  Live.cpp  LiveCanny.cpp  LiveCaptureFPS.cpp  LiveDetectShapes.cpp  README.md  Scratchpad.txt  ShowVideoFromFile.cpp  colorWheelHSV.cpp  detectSimpleShapes.cpp  scan_image_with_LUT.cpp  thingsToLearn.txt
